--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="apresentacao__conteudo2__resultado" id="resultadoTexto"> </p>
             <img src="img/High quality products 1 1.png" alt="Ilustração" class="apresentacao__conteudo2__img">
             <p class="apresentacao__conteudo2__texto" id="mensagemTexto">Nenhuma mensagem encontrada</p>
-            <p class="apresentacao__conteudo2__subtexto" id="mensagemSubtexto">Digite um texto que você deseja criptografar ou descriptografar.</p>
+            <p class="apresentacao__conteudo2__subtexto" id="mensagemSubtexto">Digite um texto que você deseja <br> criptografar ou descriptografar.</p>
 
         <button class="apresentacao__conteudo2__botao" id="copiarbotao">Copiar</button>
         </section>
