Customização da página (rosa)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="img/logo.png" alt="Logo letra 'a'">
+        <img class="logo" src="img/logo.png" alt="Logo letra 'a'">
     </header>
 
     <main class="apresentacao">
@@ -34,7 +34,7 @@
 
         <section class="apresentacao__conteudo2">
             <p class="apresentacao__conteudo2__resultado" id="resultadoTexto"> </p>
-            <img src="img/High quality products 1 1.png" alt="Ilustração" class="apresentacao__conteudo2__img">
+            <img src="img/giphy.gif" alt="Ilustração" class="apresentacao__conteudo2__img">
             <p class="apresentacao__conteudo2__texto" id="mensagemTexto">Nenhuma mensagem encontrada</p>
             <p class="apresentacao__conteudo2__subtexto" id="mensagemSubtexto">Digite um texto que você deseja <br> criptografar ou descriptografar.</p>
 
